[gd_scene load_steps=11 format=3 uid="uid://c6iu4lywivrgq"]

[ext_resource type="Script" path="res://npcs/shaman/shaman.gd" id="1_j3tao"]
[ext_resource type="Texture2D" uid="uid://cs6v12t1uu2qo" path="res://npcs/shaman/Shaman_Idle_16x32_f4.png" id="2_y51bf"]
[ext_resource type="FontFile" uid="uid://bcruet1yxf71e" path="res://PixelOperator8.ttf" id="3_p5h0l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v2weq"]
atlas = ExtResource("2_y51bf")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdklh"]
atlas = ExtResource("2_y51bf")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjo5b"]
atlas = ExtResource("2_y51bf")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivymn"]
atlas = ExtResource("2_y51bf")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gt2ga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2weq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdklh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjo5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivymn")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4pla"]
size = Vector2(60, 39)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vihnw"]
bg_color = Color(0, 0, 0, 0.486275)

[node name="Shaman" type="Node2D"]
script = ExtResource("1_j3tao")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gt2ga")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_f4pla")

[node name="shaman_buble" type="Label" parent="."]
offset_left = -60.0
offset_top = -43.0
offset_right = 60.0
offset_bottom = -6.0
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("3_p5h0l")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_vihnw")
autowrap_mode = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
